--- a/app/Resources/translations/messages.en.xliff
+++ b/app/Resources/translations/messages.en.xliff
@@ -1126,21 +1126,18 @@
                         <h4>We are Kompisbyrån</h4>
                         <p>
                             <b>Office (in alphabetical order)</b><br> 
-                            Clara Wäppling, projektledare (on parental leave) <a href="mailto:clara@kompisbyran.se">clara@kompisbyran.se</a><br>
                             Dalia Yassin, programansvarig, <a href="mailto:dalia@kompisbyran.se">dalia@kompisbyran.se</a><br>
-                            Emma Hammar, grundare och verksamhetsledare, <a href="mailto:emma@kompisbyran.se">emma@kompisbyran.se</a><br>
-			    Henrik Szabo, verksamhetschef, <a href="mailto:henrik@kompisbyran.se">henrik@kompisbyran.se</a><br> 
-                            Miriam Ghebressilasie, matchningsansvarig, <a href="mailto:miriam@kompisbyran.se">miriam@kompisbyran.se</a><br> 
+                            Emma Hammar, grundare och verksamhetschef, <a href="mailto:emma@kompisbyran.se">emma@kompisbyran.se</a><br>
+                            Miriam Ghebressilasie, matchningsansvarig, <a href="mailto:miriam@kompisbyran.se">miriam@kompisbyran.se</a><br>
+                            Clara Wäppling, projektledare (on parental leave) <a href="mailto:clara@kompisbyran.se">clara@kompisbyran.se</a><br>
                             <br>
                             <b>Styrelse</b><br> 
                             Jörgen Bergqvist, ordförande <br>
                             Emma Hammar, vice ordförande <br>
-                            Cecilia Holmgren, grundare och sekreterare <br>
-                            Olle Hammar, kassör <br>
-                            Madelene Lindberg, ledamot <br>
-                            Mikael Falgard, suppleant <br>
-                            Martina Iven, suppleant <br>
-                            Valberedning: Noa Bachner <br>
+                            Emilia Molin, ledamot <br>
+                            Olle Hammar, suppleant <br>
+                            Madelene Lindberg, revisor <br>
+                            Noa Bachner, valberedning <br>
                             <br>
                             <b>IT</b><br>
                             Jon Gotlin, IT-ansvarig<br>
@@ -1178,13 +1175,10 @@
                             Kalmar: <a href="mailto:kalmar@kompisbyran.se">kalmar@kompisbyran.se</a><br>                           
                             Örebro: <a href="mailto:orebro@kompisbyran.se">orebro@kompisbyran.se</a><br>
                             Other cities: <a href="mailto:matchning@kompisbyran.se">matchning@kompisbyran.se</a><br>
-                            
-                            Questions about Start friend (Startkompis)?<br>
-                            <a href="mailto:start@kompisbyran.se">start@kompisbyran.se</a><br>
-
-                            Questions about collaborations, recruitment or press, please contact: <a href="mailto:emma@kompisbyran.se">emma@kompisbyran.se</a> or <a href="mailto:kontakt@kompisbyran.se">kontakt@kompisbyran.se</a> <br>
 
                             Questions about events: <a href="mailto:event@kompisbyran.se">event@kompisbyran.se</a> <br>
+
+                            Questions about collaborations, recruitment or press, please contact: <a href="mailto:emma@kompisbyran.se">emma@kompisbyran.se</a> or <a href="mailto:kontakt@kompisbyran.se">kontakt@kompisbyran.se</a> <br>
 
                             Other questions: <a href="kontakt@kompisbyran.se">kontakt@kompisbyran.se</a>
                         </p>
