--- a/app/Resources/translations/messages.ar.xliff
+++ b/app/Resources/translations/messages.ar.xliff
@@ -1091,21 +1091,18 @@
                         <h4>نحن كعاملين في كومبيس بيرون</h4>
                         <p>
                             Office (in alphabetical order) <br> 
-                            Clara Wäppling, projektledare (föräldraledig) <a href="mailto:clara@kompisbyran.se">clara@kompisbyran.se</a><br>
                             Dalia Yassin, programansvarig, <a href="mailto:dalia@kompisbyran.se">dalia@kompisbyran.se</a><br>
-                            Emma Hammar, grundare, <a href="mailto:emma@kompisbyran.se">emma@kompisbyran.se</a><br>
-                            Henrik Szabo, verksamhetschef, <a href="mailto:henrik@kompisbyran.se">henrik@kompisbyran.se</a><br>
+                            Emma Hammar, grundare och verksamhetschef, <a href="mailto:emma@kompisbyran.se">emma@kompisbyran.se</a><br>
                             Miriam Ghebressilasie, matchningsansvarig, <a href="mailto:miriam@kompisbyran.se">miriam@kompisbyran.se</a><br> 
+                            Clara Wäppling, projektledare (föräldraledig) <a href="mailto:clara@kompisbyran.se">clara@kompisbyran.se</a><br>
                             <br>
                             <b>Styrelse</b><br> 
                             Jörgen Bergqvist, ordförande <br>
                             Emma Hammar, vice ordförande <br>
-                            Cecilia Holmgren, grundare och sekreterare <br>
-                            Olle Hammar, kassör <br>
-                            Madelene Lindberg, ledamot <br>
-                            Mikael Falgard, suppleant <br>
-                            Martina Iven, suppleant <br>
-                            Valberedning: Noa Bachner <br>
+                            Emilia Molin, ledamot <br>
+                            Olle Hammar, suppleant <br>
+                            Madelene Lindberg, revisor <br>
+                            Noa Bachner, valberedning <br>
                             <br>
                             <b>IT</b><br>
                             Jon Gotlin, IT-ansvarig<br>
@@ -1145,8 +1142,6 @@
                             أوميو <a href="mailto:matchning@kompisbyran.se">matchning@kompisbyran.se</a><br>
                             أوبسالا <a href="mailto:matchning@kompisbyran.se">matchning@kompisbyran.se</a><br>
                             أوريبرو <a href="mailto:orebro@kompisbyran.se">orebro@kompisbyran.se</a><br>
-
-                            Frågor om Startkompis: <a href="mailto:start@kompisbyran.se">start@kompisbyran.se</a><br>
 
                             متنوع <a href="mailto:kontakt@kompisbyran.se">kontakt@kompisbyran.se</a><br>
 
