--- a/app/Resources/translations/messages.en.xliff
+++ b/app/Resources/translations/messages.en.xliff
@@ -921,7 +921,7 @@
                     Kompisbyrån is a non-profit organization since 2014. We connect new friends with 
                     different backgrounds and experiences but with similar interests. A new and an established 
                     Swede meet to practise Swedish over a “fika”. We want to make integration easy and accessible. 
-                    Today, Kompisbyrån is active in 10 cities, has a dozen active ambassadours, and nearly 14 000 
+                    Today, Kompisbyrån is active in 10 cities, has a dozen active ambassadours, and more than 17 000 
                     contacts from 126 countries have been mediated.
                 </target>
             </trans-unit>
