--- a/app/Resources/translations/messages.en.xliff
+++ b/app/Resources/translations/messages.en.xliff
@@ -1130,8 +1130,9 @@
                         <h4>We are Kompisbyrån</h4>
                         <p>
                             <b>Office (in alphabetical order)</b><br> 
-                            Dalia Yassin, programansvarig, <a href="mailto:dalia@kompisbyran.se">dalia@kompisbyran.se</a><br>
-                            Emma Hammar, grundare och verksamhetschef, <a href="mailto:emma@kompisbyran.se">emma@kompisbyran.se</a><br>
+                            Elin Törnblom Duthu, projekledare, <a href="mailto:elin@kompisbyran.se">elin@kompisbyran.se</a><br>
+                            Emma Hammar, grundare, <a href="mailto:emma@kompisbyran.se">emma@kompisbyran.se</a><br>
+                            Mardin Baban, verksamhetschef, <a href="mailto:mardin@kompisbyran.se">mardin@kompisbyran.se</a><br>
                             Miriam Ghebressilasie, matchningsansvarig, <a href="mailto:miriam@kompisbyran.se">miriam@kompisbyran.se</a><br>
                             Clara Wäppling, projektledare (on parental leave) <a href="mailto:clara@kompisbyran.se">clara@kompisbyran.se</a><br>
                             <br>
