--- a/app/Resources/translations/messages.sv.xliff
+++ b/app/Resources/translations/messages.sv.xliff
@@ -1132,7 +1132,10 @@
                             Comviq som stöttar Kompisbyråns kansli med mobiltelefoner 2018.
                         </p>
                         <p>
-                            TS reklam som stått för Kompisbyråns collegetröjor och tygpåsar 2018.
+                            TSreklam som stått för Kompisbyråns collegetröjor och tygpåsar 2018.
+                        </p>
+                        <p>
+                            Tshirt.se som stått för Kompisbyråns t-shirts 2019.
                         </p>
                         <p>
                             inUse som tagit fram en UX-analys av Kompisbyrån anmälningsformulär 2018.  
