--- a/app/Resources/translations/messages.en.xliff
+++ b/app/Resources/translations/messages.en.xliff
@@ -1061,7 +1061,10 @@
                             Comviq that supports Kompisbyrån's office with cell phones 2018.
                         </p>
 			<p>
-                            TS reklam that supports Kompisbyrån with sweatshirts and tote bags 2018.
+                            TSreklam that supports Kompisbyrån with sweatshirts and tote bags 2018.
+                        </p>
+                        <p>
+                            Tshirt.se that supports Kompisbyrån with t-shirts 2019.
                         </p>
                         <p>
                             inUse which's provided Kompisbyrån with an UX-analyse of our registration process 2018.
