--- a/app/Resources/translations/messages.sv.xliff
+++ b/app/Resources/translations/messages.sv.xliff
@@ -1252,7 +1252,7 @@
                             Kalmar: <a href="mailto:kalmar@kompisbyran.se">kalmar@kompisbyran.se</a><br>                             
                             Örebro: <a href="mailto:orebro@kompisbyran.se">orebro@kompisbyran.se</a><br>                             
                             Event: <a href="mailto:event@kompisbyran.se">event@kompisbyran.se</a><br> 
-                            Samarbete, rekrytering eller press: <a href="mailto:emma@kompisbyran.se ">emma@kompisbyran.se </a><br>   
+                            Samarbete, rekrytering eller press: <a href="mailto:mardin@kompisbyran.se ">mardin@kompisbyran.se </a><br>   
                             Övrigt: <a href="mailto:kontakt@kompisbyran.se">kontakt@kompisbyran.se</a><br>   
                         </p>
                     ]]>
