--- a/app/Resources/translations/messages.en.xliff
+++ b/app/Resources/translations/messages.en.xliff
@@ -1185,7 +1185,7 @@
 
                             Questions about events: <a href="mailto:event@kompisbyran.se">event@kompisbyran.se</a> <br>
 
-                            Questions about collaborations, recruitment or press, please contact: <a href="mailto:emma@kompisbyran.se">emma@kompisbyran.se</a> or <a href="mailto:kontakt@kompisbyran.se">kontakt@kompisbyran.se</a> <br>
+                            Questions about collaborations, recruitment or press, please contact: <a href="mailto:mardin@kompisbyran.se">mardin@kompisbyran.se</a> or <a href="mailto:kontakt@kompisbyran.se">kontakt@kompisbyran.se</a> <br>
 
                             Other questions: <a href="kontakt@kompisbyran.se">kontakt@kompisbyran.se</a>
                         </p>
