--- a/app/Resources/translations/messages.ar.xliff
+++ b/app/Resources/translations/messages.ar.xliff
@@ -1151,7 +1151,7 @@
 
                             Frågor om event: <a href="mailto:event@kompisbyran.se">event@kompisbyran.se</a><br>
 
-                            أسئلة عن العمل المشترك,التجنيد ز الصحافة تواصل مع <a href="mailto:emma@kompisbyran.se">emma@kompisbyran.se </a> أو <a href="mailto:kontakt@kompisbyran.se ">kontakt@kompisbyran.se </a>
+                            أسئلة عن العمل المشترك,التجنيد ز الصحافة تواصل مع <a href="mailto:mardin@kompisbyran.se">mardin@kompisbyran.se </a> أو <a href="mailto:kontakt@kompisbyran.se ">kontakt@kompisbyran.se </a>
                         </p>
                     ]]>
                 </target>
