--- a/app/Resources/translations/messages.sv.xliff
+++ b/app/Resources/translations/messages.sv.xliff
@@ -1206,7 +1206,8 @@
                             Mardin Baban, verksamhetschef, <a href="mailto:mardin@kompisbyran.se">mardin@kompisbyran.se</a><br>
                             Miriam Ghebressilasie, matchningsansvarig, <a href="mailto:miriam@kompisbyran.se">miriam@kompisbyran.se</a><br> 
                             Clara Wäppling, projektledare (föräldraledig) <a href="mailto:clara@kompisbyran.se">clara@kompisbyran.se</a><br>
-
+                            <br>
+                            Presskontakt: Mardin Baban, <a href="mailto:mardin@kompisbyran.se">mardin@kompisbyran.se</a><br>
                             <br>
                             <b>Styrelse</b><br> 
                             Jörgen Bergqvist, ordförande <br>
