--- a/app/Resources/translations/messages.en.xliff
+++ b/app/Resources/translations/messages.en.xliff
@@ -1165,8 +1165,10 @@
                             <br>
                             <b>Eventansvariga</b><br>
                             Elisabeth Rimér-Asplund, eventansvarig Stockholm, (tillfälligt uppehåll)<br> 
+                            Ioana Velasquez, eventansvarig Stockholm<br>
                             Olivia Wideroth, teamledare eventansvariga Stockholm<br>
-                            Sidney Pereira Da Silva, eventansvarig Stockholm
+                            Sidney Pereira Da Silva, eventansvarig Stockholm<br>
+                            Sofia Tyrberg, eventansvarig Stockholm<br>
                             Susanna Bjerke, eventansvarig Örebro<br>
                         </p>
                     ]]>
