--- a/app/Resources/translations/messages.en.xliff
+++ b/app/Resources/translations/messages.en.xliff
@@ -1158,13 +1158,12 @@
                             Nienke Bakker, Kompisledare Kalmar<br>
                             <br>
                             <b>Ambassadörer</b><br>  
-                            Heydar Sheykhali, ambassadör matchning<br>
                             Alexander Unge, ambassadör matchning<br> 
                             Paulina Franklin, ambassadör matchning<br>
                             Caroline Uggla, grafisk formgivning<br>
                             <br>
                             <b>Eventansvariga</b><br>
-                            Elisabeth Rimér-Asplund, eventansvarig Stockholm, (tillfälligt uppehåll)<br> 
+                            Elisabeth Rimér-Asplund, eventansvarig Stockholm<br> 
                             Ioana Velasquez, eventansvarig Stockholm<br>
                             Olivia Wideroth, teamledare eventansvariga Stockholm<br>
                             Sidney Pereira Da Silva, eventansvarig Stockholm<br>
