--- a/app/Resources/translations/messages.sv.xliff
+++ b/app/Resources/translations/messages.sv.xliff
@@ -828,6 +828,9 @@
                         (Om du skulle behöva komplettera din ansökan meddelar vi dig om detta.)<br><br>
                         
                         2. Bestäm ett datum. Du mailar personen inom 3 dagar och bestämmer datum, tid och plats för ert möte. 
+                        Det är i dagsläget INTE ett måste att boka in en fika omgående med sin fikakompis. Ni kan tillsammans 
+                        välja att boka in ett möte digitalt via exempelvis Skype eller FaceTime. Alternativt höras längre fram
+                        för att boka in en kompisfika. 
                         Skriv gärna på svenska och engelska. Det är bådas ansvar att ni etablerar kontakt med varandra. Kom ihåg att 
                         respektera varandra, att inte svara på ett mail påverkar den andra personen som har sett fram emot 
                         ett möte. Kontakta oss om du inte får svar.<br><br>  
