Uppdaterad integritetspolicy till Nya Kompisbyrån

--- a/app/Resources/translations/messages.sv.xliff
+++ b/app/Resources/translations/messages.sv.xliff
@@ -682,7 +682,7 @@
                             för att kunna utöka ditt sociala nätverk.
                         </li>
                         <li>
-                            Kompisbyrån matchar ihop nya fikakompisar baserat på liknande intressen och nya startkompisar baserat på den kommun ni bor i. 
+                            Nya Kompisbyrån matchar ihop nya fikakompisar baserat på liknande intressen och nya startkompisar baserat på den kommun ni bor i. 
                         </li>
                         <li>
                             Som fikakompis måste du kunna träffas i Göteborg, Jönköping, Kalmar, Linköping, Malmö, 
@@ -690,7 +690,7 @@
                             städer i framtiden.
                         </li>
                         <li>
-                            Kompisbyrån ansvarar endast för att länka samman personer som har bott i Sverige under kortare tid med 
+                            Nya Kompisbyrån ansvarar endast för att länka samman personer som har bott i Sverige under kortare tid med 
                             personer som har bott i Sverige länge. 
                         </li>
                         <li>
@@ -706,7 +706,7 @@
                             betalar varje person själv.
                         </li>
                         <li>
-                            Kompisbyrån rekommenderar att ni träffas ungefär 1 timme på ett offentligt ställe i stadens centrala del.
+                            Nya Kompisbyrån rekommenderar att ni träffas ungefär 1 timme på ett offentligt ställe i stadens centrala del.
                         </li>
                         <li>
                             Vår ambition är att hitta en ny kompis till dig inom 30 dagar. Det innebär att du kan få vänta.
@@ -728,77 +728,107 @@
                             språkskillnader kan skapa missuppfattningar.
                         </li>
                         <li>
-                            Du delar Kompisbyråns syn på alla människors lika värde. Det gäller oavsett kön, 
+                            Du delar Nya Kompisbyråns syn på alla människors lika värde. Det gäller oavsett kön, 
                             könsöverskridande identitet eller uttryck, etnisk tillhörighet, religion eller annan 
                             trosuppfattning, funktionsnedsättning, sexuell läggning och ålder.
                         </li>
                         <li>
-                            Kompisbyrån kan inte garantera att vi hittar en ny kompis till dig men vi gör alltid vårt bästa.
+                            Nya Kompisbyrån kan inte garantera att vi hittar en ny kompis till dig men vi gör alltid vårt bästa.
                         </li>
                         <li>
                             Vi vill hela tiden bli bättre på vårt arbete. Därför kontaktar vi dig efter ert möte för att fråga hur det var.
                         </li>
                         <li>
                             Till dig som skickar in en förfrågan om att bli kompis i Danderyd: Kompisbyrån i Danderyd möjliggörs i samarbete med 
-                            Danderyds kommun och den ideella organisationen “Alla Tillsammans i Danderyd”. Genom att godkänna Kompisbyråns villkor 
+                            Danderyds kommun och den ideella organisationen “Alla Tillsammans i Danderyd”. Genom att godkänna Nya Kompisbyråns villkor 
                             godkänner du att personer från kommunen, samt från föreningen “Alla Tillsammans i Danderyd”, kan komma att 
                             kontakta dig via telefon eller mail med information och stöd relaterad till din anmälan.
                         </li>
                           <p>
                             <strong>Integritetspolicy</strong>
                         </p>
-                        <p>
-                            Kompisbyrån (Organisationsnummer 802492-6050) är personuppgiftsansvarig för uppgifterna du lämnar till oss.
+                          <p>
+                            <strong>Personuppgiftsansvarig</strong>
                         </p>
                         <p>
-                            Kompisbyrån använder dina personuppgifter i följande syften:
+                            Nya Kompisbyrån är personuppgiftsansvarig för behandlingen av dina personuppgifter. Våra kontaktuppgifter är:
+                       </p> 
+                         <p>      Nya Kompisbyrån, org nr 802491-8990
+                       <br/>     
+                           Adress: Magnus Ladulåsgatan 3, 118 65
+                        <br/>
+                              Kontaktperson: Mardin Baban, 079-337 56 97, mardin@nyakompisbyran.se
+                        <br/>
+                        </p>
+                         <p>
+                            <strong>Ändamål</strong>
+                        </p>
+                        <p>
+                            Nya Kompisbyrån använder dina personuppgifter för följande syften:
                         </p>
                         
-                            1. Kompisbyrån använder de personuppgifter som du har lämnat om dig själv för att matcha ihop dig med 
-                               en annan av våra användare. Exempelvis för en fikakompis eller startkompis. I detta ingår att vi 
-                               presenterar deltagare som vi har matchat ihop för varandra med namn.
+                            1.Nya Kompisbyrån använder de personuppgifter som du har lämnat om dig själv för att matcha ihop dig med en annan 
+                            av våra användare. Exempelvis för en fikakompis, digitalkompis eller som middagsgäst. I detta ingår att 
+                            vi presenterar deltagare som vi har matchat ihop för varandra med namn.
                        <br/>
-                            2. Vi kan också komma att bjuda in dig till Kompisbyråns aktiviteter eller erbjudanden.
+                            2. Vi kan också komma att bjuda in dig till Nya Kompisbyråns aktiviteter eller erbjudanden.
                        <br/>
-                            3. Informationen används för att kunna besvara frågor, driva och förbättra vår webbplats och program. 
+                            3. Efter ett fikamöte, digitalt möte eller en middag kommer vi att kontakta dig för att fråga hur det var. 
                        <br/>
-                            4. Dina personuppgifter kan delas med andra aktörer om det krävs för att Kompisbyrån ska kvalificera sig
-                               för stöd eller bidrag. Detta kan gälla offentliga organ eller privata företag som sponsrar Kompisbyråns 
-                               verksamhet. Dessa andra aktörer har inte tillåtelse att använda dina personuppgifter till marknadsföring
-                               eller till något annat än för att undersöka att vår verksamhet når upp till deras krav.
+                            4. Informationen används också för att kunna besvara frågor, driva och förbättra vår webbplats och program.
                        <br/>
-                            5. Utöver detta så måste Kompisbyrån lämna vidare dina uppgifter om det framgår av lag att vi måste det.
+                            5. Dina personuppgifter kan delas med andra aktörer om det krävs för att Nya Kompisbyrån ska kvalificera sig för stöd 
+                                eller bidrag. Detta kan gälla offentliga organ eller privata företag som sponsrar Nya Kompisbyråns verksamhet. 
+                                Dessa andra aktörer har inte tillåtelse att använda dina personuppgifter till marknadsföring eller till något annat 
+                                än för att undersöka att vår verksamhet når upp till deras krav.
+                        <br/>
+                            6. Dina personuppgifter kan även komma att delas med Uppsala universitet för utvärderings- och forskningssyfte. 
+                            I samband med detta kan Uppsala universitet även begära in ytterligare personuppgifter från SCB. Uppgifterna kommer 
+                            alltid att vara helt anonyma vid publikation. Uppsala universitet är personuppgiftsansvariga för behandlingen i 
+                            utvärderings- och forskningssyfte
+                        <br/>
+                            7. Utöver detta måste Nya Kompisbyrån lämna vidare dina uppgifter om det framgår av lag att vi måste det.
+                        <p>
+                            <strong>Samtycke</strong>
+                        </p>
                        <li>
-                            Kompisbyråns personuppgiftshantering grundar sig på samtycke. När du registrerar dina personuppgifter 
-                            hos Kompisbyrån ger du oss ditt samtycke till att använda dina personuppgifter. Du kan närsomhelst dra 
-                            tillbaka ditt samtycke och då tar vi bort de uppgifter vi har sparade om dig. Du kan välja om du vill 
-                            att vi ska ta bort alla eller bara vissa av uppgifterna.
+                            För att kunna tillhandahålla tjänsten behöver vi ditt samtycke för att behandla personuppgifter om dig såsom namn, 
+                            ålder, personnummer/samordningsnummer (gäller bara ny svensk), telefonnummer, e-postadress, kön, 
+                            bostadskommun, IP-adress, bilder, ursprungsland och uppgift om inskrivning hos Arbetsförmedlingen 
+                            (gäller bara ny svensk).
                        </li>
+                        <li>Du har rätt att när som helst ta tillbaka ditt samtycke. Detta gör du genom att kontakta [Nya Kompisbyrån] 
+                            på e-postadressen kontakt@nyakompisbyran.se. OBS dock att ett återkallande av ditt samtycke inte påverkar 
+                            lagligheten av behandlingen innan samtycket återkallades.
+                        </li>
+                          <p>
+                            <strong>Dina rättigheter</strong>
+                        </p>
                         <li>
-                            Dina personuppgifter förs inte över till tredje land (det vill säga land utanför EU/ESS).
+                            Du har rätt att kontakta oss för att få information om vilka uppgifter som behandlas om dig, ett s.k. registerutdrag, 
+                            eller för att begära rättelse eller begränsning av dina personuppgifter. Du har rätt att i vissa fall få 
+                            dina personuppgifter överförda i elektroniskt format till en annan personuppgiftsansvarig, s.k. 
+                            dataportabilitet. Du har även rätt att begära att få dina personuppgifter raderade. Du har också rätt 
+                            att framställa klagomål angående behandlingen av dina personuppgifter till oss och till tillsynsmyndigheten, 
+                            Datainspektionen. Det kan du göra om du anser att vi inte behandlar dina personuppgifter i enlighet med 
+                            dataskyddsförordningen (GDPR). Mer information om detta hittar du <a href="https://www.datainspektionen.se/vagledningar/for-dig-som-privatperson/klagomal-och-tips/?_t_id=1B2M2Y8AsgTpgAmY7PhCfg%3d%3d&_t_q=anm%C3%A4la&_t_tags=language%3asv%2csiteid%3a994ba21f-261a-4557-a79f-e3dd826642d2&_t_ip=10.109.50.20&_t_hit.id=Datainspektionen_Web_Features_StandardPage_StandardPageType/_f2206461-c0d3-4dfc-8eca-caada2c4d500_sv&_t_hit.pos=11">här</a>.
                         </li>
                         <li>
-                            Om du vill avregistrera dig, skicka ett e-mail till kontakt@kompisbyran.se
+                            Dina personuppgifter förs inte över till tredje land (det vill säga land utanför EU/EES).
                         </li>
                         <li>
-                            Utöver att få dina personuppgifter raderade har du även rätt få dina personuppgifter rättade, begära att 
-                            behandlingen av dina personuppgifter begränsas samt få ett utdrag av av de uppgifter som Kompisbyrån har 
-                            om dig. Du kan även göra en invändning mot en särskild behandling. Om du vill något av detta kontakta: 
-                            kontakt@kompisbyran.se
+                            Om du vill avregistrera dig, skicka ett e-mail till kontakt@nyakompisbyran.se. Nya Kompisbyrån tar då bort dina uppgifter.
                         </li>
+                        <p>
+                            <strong>Lagring av personuppgifter</strong>
+                        </p>
                         <li>
-                            Kompisbyrån bistår dig om du vill få dina personuppgifter hos oss flyttade till en annan tjänst (så
-                            kallad dataportabilitet) en sådan begäran skickas till kontakt@kompisbyran.se
+                            Om du har blivit matchad eller blivit matchningsbar men ingen matchning skett tas dina uppgifter bort 
+                            efter ett (1) år. Om de uppgifter du har lämnat inte är korrekta eller fullständiga får du ett 
+                            påminnelsemail från oss. Om du ej anger korrekta och/eller fullständiga uppgifter tas dina uppgifter 
+                            bort efter tre (3) månader.                        
                         </li>
-                        <li>
-                            Datainspektionen är tillsynsmyndighet för dessa personuppgiftsbehandlingar och om du anser att de behandlas
-                            felaktigt så har du rätt att lämna klagomål hos dem. Mer information om detta hittar du
-                            <a href="https://www.datainspektionen.se/vagledningar/for-dig-som-privatperson/klagomal-och-tips/?_t_id=1B2M2Y8AsgTpgAmY7PhCfg%3d%3d&_t_q=anm%C3%A4la&_t_tags=language%3asv%2csiteid%3a994ba21f-261a-4557-a79f-e3dd826642d2&_t_ip=10.109.50.20&_t_hit.id=Datainspektionen_Web_Features_StandardPage_StandardPageType/_f2206461-c0d3-4dfc-8eca-caada2c4d500_sv&_t_hit.pos=11">här</a>.
-                        </li>
-                        <li>
-                             Kompisbyrån lagrar dina personuppgifter tills det att du väljer att ta bort dem eller att ditt konto 
-                             varit inaktivt i 36 månader.
-                         </li>
+                      
                     </ul>]]></target>
             </trans-unit>
             <trans-unit id="terms.outro">
